Add native installer support